fix(axiom): Fix scrolling and spacing in slash command popup (#11985)
* Update slash command editor spacing and scrolling
* Update workflow variable dropdown

--- a/apps/helpdesk/src/pages/common/draftjs/plugins/slashCommand/SlashCommandSuggestions.less
+++ b/apps/helpdesk/src/pages/common/draftjs/plugins/slashCommand/SlashCommandSuggestions.less
@@ -6,6 +6,14 @@
         max-width: 400px;
     }
 
+    .content {
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        min-height: 0;
+        flex: 1;
+    }
+
     .backButton {
         max-width: 100%;
         height: auto;
@@ -84,6 +92,20 @@
 
     .header {
         color: var(--content-accent-default);
+    }
+
+    .dropdownHeader {
+        height: auto;
+        padding: var(--spacing-xs);
+        background-color: var(--elevation-neutral-high);
+    }
+
+    .backButton {
+        padding: 0 var(--spacing-xs) !important;
+    }
+
+    .search {
+        padding: 0 0 var(--spacing-xs);
     }
 
     .itemTrailIcon {
