--- a/apps/helpdesk/src/pages/common/draftjs/plugins/toolbar/components/WorkflowVariableDropdown.less
+++ b/apps/helpdesk/src/pages/common/draftjs/plugins/toolbar/components/WorkflowVariableDropdown.less
@@ -78,6 +78,20 @@
         color: var(--content-accent-default);
     }
 
+    .dropdownHeader {
+        height: auto;
+        padding: var(--spacing-xs);
+        background-color: var(--elevation-neutral-high);
+    }
+
+    .backButton {
+        padding: 0 var(--spacing-xs) !important;
+    }
+
+    .search {
+        padding: 0 0 var(--spacing-xs);
+    }
+
     .itemTrailIcon {
         color: var(--content-neutral-secondary);
     }
